WP-7473: add spacing, fix line-heights.

--- a/css/style.css
+++ b/css/style.css
@@ -1053,7 +1053,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 48px;
-  line-height: 56px;
+  line-height: 1.2;
   font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
@@ -1068,35 +1068,35 @@ h2 {
   font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 34px;
   font-weight: bold;
-  line-height: 40px;
+  line-height: 1.2;
 }
 
 h3 {
   font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 26px;
   font-weight: bold;
-  line-height: 30px;
+  line-height: 1.2;
 }
 
 h4 {
   font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   font-weight: bold;
-  line-height: 26px;
+  line-height: 1.3;
 }
 
 h5 {
   font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   font-weight: normal;
-  line-height: 24px;
+  line-height: 1.3;
 }
 
 h6 {
   font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   font-weight: normal;
-  line-height: 24px;
+  line-height: 1.3;
 }
 
 .view-mode-full h1.full-title {
