--- a/sass/conditionals/exec-ed/ee-overview-detail.sass
+++ b/sass/conditionals/exec-ed/ee-overview-detail.sass
@@ -294,6 +294,8 @@
     // Title size
     .group-wrapper-title,
     .field-name-title
+      display: block
+      margin-bottom: 12px
       h2
         font-size: 22px !important
 
